// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<Fragment>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Home
    </button>
  </div>
  <h1>
    Position
  </h1>
  <Connect(lifecycle(mapProps(StockLogo)))
    symbol="AAPL"
  />
  <table>
    <tbody>
      <tr>
        <th
          colSpan={2}
        >
          Symbol
        </th>
        <td>
          AAPL
        </td>
      </tr>
      <tr>
        <th
          colSpan={2}
        >
          Amount
        </th>
        <td>
          1
        </td>
      </tr>
      <tr>
        <th
          rowSpan={4}
        >
          Open
        </th>
        <th>
          Date
        </th>
        <td>
          2019-07-01
        </td>
      </tr>
      <tr>
        <th>
          Price
        </th>
        <td>
          <Money
            value={100}
          />
        </td>
      </tr>
      <tr>
        <th>
          Commission
        </th>
        <td>
          <Money
            value={1}
          />
        </td>
      </tr>
      <tr>
        <th>
          Sum
        </th>
        <td>
          <Money
            value={101}
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</Fragment>
`;

exports[`matches snapshot when loading 1`] = `
<Fragment>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Home
    </button>
  </div>
  <h1>
    Position
  </h1>
  <div>
    <Progress />
  </div>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</Fragment>
`;
